Reduce # of object instantiations